--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: api_yamdb/
           push: true
           tags: oupsfed/api_yamdb:latest
   deploy:
